# memogarden-letta

./: .gitignore  AGENTS.md  README.md  install.sh  memogarden.service  pyproject.toml
.claude/: settings.json
.claude/agents/: change-reviewer.md  code-review.md
.claude/output-styles/: learning-mode.md
.claude/skills/change-commit/: SKILL.md
.claude/skills/continue-implementation/: SKILL.md
.claude/skills/jupyter-telemetry-assignments/: SKILL.md
.claude/skills/memogarden-api-endpoint/: SKILL.md
.devcontainer/: .dockerignore  Dockerfile  Dockerfile.fast  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: deploy.yml
api/: .env.example  README.md  pyproject.toml
api/api/: __init__.py  config.py  exceptions.py  main.py  validation.py
api/api/middleware/: __init__.py  api.py  api_keys.py  decorators.py  service.py  token.py  ui.py
api/api/middleware/schemas/: __init__.py  auth.py
api/api/schemas/: __init__.py  recurrence.py  transaction.py
api/api/templates/: api_key_new.html  api_keys.html  base.html  login.html  settings.html
api/api/v1/: __init__.py
api/api/v1/core/: __init__.py  recurrences.py  transactions.py
api/api/v1/soil/: __init__.py
docs/: api-response-schemas.md  api.md  architecture.md  configuration.md  cross-database-transactions.md  deployment.md  letta-integration.md  quickstart.md  repositories.md  search-verb.md  semantic-api-core-bundle.md  testing-guide.md  troubleshooting.md
docs/history/: api-test-profile-2026-02-15.md
docs/testing/: test-runner.md
gmail-oauth/: .gitignore  README.md  __init__.py  cli.py  endpoints.py  gmail_auth_cli.py  oauth-auth-url.py  oauth-exchange.py  oauth_helper.py  pyproject.toml  store_client.py  test_oauth.py
memogarden-letta/: README.md  pyproject.toml  run_tests.sh
memogarden-letta/mgLetta/: __init__.py  agent.py  blocks.py  client.py  tools.py
memogarden-letta/tests/: __init__.py  test_blocks.py  test_client.py  test_letta_integration.py
memogarden-utils/: run_tests.sh
plan/: HACM Credential File Schema v3.md  Headless Agent Credential Manager (HACM) PRD.md  MUSH PRD Extension.md  Multi-user Shell (MUSH) PRD v0_1.md  budget_implementation.md  budget_prd.md  bug_report_session_15_fixture.md  email-analysis.md  email-implementation-plan.md  email-import-implementation.md  implementation.md  jce_whitepaper_v1_0.md  memogarden-implementation-plan.md  memogarden-project-restructure-plan.md  memogarden_prd_v0_10_0.md  memogarden_prd_v0_11_0.md  memogarden_prd_v0_7_0.md  memogarden_prd_v0_9_0.md  memogarden_prd_v4.md  memogarden_prd_v4_delta_analysis.md  prd.md  prd_v4_delta_analysis.md  project_studio_implementation_plan.md  project_studio_specification_v0_4_0.md  project_studio_specification_v0_4_1.md  refactor-rfc004-alignment.md  rfc-004-implementation-plan.md  rfc_001_security_operations_v4.md  rfc_002_relation_time_horizon_v5.md  rfc_003_context_mechanism_v2.md  rfc_003_context_mechanism_v3.md  rfc_003_context_mechanism_v4.md  rfc_004_package_deployment_v1.md  rfc_004_package_deployment_v2.md  rfc_005_memogarden_api_design_v3.md  rfc_005_memogarden_api_design_v7.md  rfc_005_memogarden_api_design_v7_1.md  rfc_007_runtime_operations_v1.md  rfc_007_runtime_operations_v2.md  rfc_008_transaction_semantics_v1.md  (+5 more)
plan/future/: migration-mechanism.md  schema-extension-design.md  soil-design.md
providers/gmail-importer/: README.md  pyproject.toml
providers/gmail-importer/gmail_importer/: __init__.py  importer.py
providers/mbox-importer/: README.md  pyproject.toml
providers/mbox-importer/mbox_importer/: __init__.py  email_parser.py  import_mbox.py
schemas/: email.yaml
scripts/: conftest_template.py  debug-memogarden.sh  deploy-memogarden-core.sh  deploy-memogarden.sh  init-db.sh  lint.sh  memogarden-wrapper.sh  migrate.sh  pre-commit  run.sh  run_tests_template.sh  test-coverage.sh  test.sh  test_entrypoint.sh
soil/: __init__.py  email_importer.py  email_parser.py  import_mbox.py
soil/schema/: schema.sql
tests/: soil_characterization_tests.py
tests/docker/: Dockerfile.test  README.md  test-deployment.sh
utils/: README.md  test-runner-functions.sh
(+28 files in other folders)
