[tool.poetry]
name = "memogarden"
version = "0.1.0"
description = "MemoGarden - Personal memory system for financial transactions"
authors = ["MemoGarden Contributors"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.13"
# Local packages
memogarden-system = {path = "memogarden-system", develop = true}
memogarden-api = {path = "memogarden-api", develop = true}
# Runtime dependencies
flask = "^3.0.0"
flask-cors = "^5.0.0"
gunicorn = "^21.2.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.0"
pyjwt = "^2.8.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-flask = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.1.0"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["api", "system"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
